Changed ticket show view.

--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -12,9 +12,11 @@
 
 <p>
   <b>Replies:</b><br>
-  <% @ticket.replies.each do |reply| %>
-   <%= reply.body %> - <%= link_to "Edit", edit_reply_path(reply) %> | <%= link_to "Delete", reply_path(reply), method: "delete", confirm: "Are you sure?" %>
-  <% end %>
+  <ul>
+    <% @ticket.replies.each do |reply| %>
+    <li><%= reply.body %> - <%= link_to "Edit", edit_reply_path(reply) %> | <%= link_to "Delete", reply_path(reply), method: "delete", confirm: "Are you sure?" %></li>
+    <% end %>
+  </ul>
 </p>
 
 <%= link_to 'Edit', edit_ticket_path(@ticket) %> |
